--- a/kustomize/tester/deployment.yaml
+++ b/kustomize/tester/deployment.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
         - name: loadtester
           image: olaffreund/flagger-loadtester:arm64
-          imagePullPolicy: Allways
+          imagePullPolicy: Always
           ports:
             - name: http
               containerPort: 8080
